/*
http://www.apache.org/licenses/LICENSE-2.0.txt


Copyright 2016 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package common;

message Time{
	int64 sec = 1;
	int64 nsec = 2;
}

message Empty{
}

message SnapError {
    string error_string = 1;
    map<string, string> error_fields = 2;
}

message Label {
	uint64 index = 1;
	string name = 2;
}
// core.Metric
message Metric {
	repeated NamespaceElement Namespace = 1;
	int64 Version = 2;
	ConfigMap Config = 3;
	Time LastAdvertisedTime = 4;
	map<string, string> Tags = 5;
	Time Timestamp = 6;
	string Unit = 7;
	string Description = 8;
	oneof data {
		string string_data = 9;
		float float32_data = 10; 
		double float64_data = 11;
		int32 int32_data = 12;
		int64 int64_data = 13;
		bytes bytes_data = 14;		
	}
}

message NamespaceElement {
	string Value = 1;
	string Description = 2;
	string Name = 3;
}

// core.SubscribedPlugin
message SubscribedPlugin {
	string TypeName = 1;
	string Name = 2;
	int64 Version = 3;
	ConfigMap Config = 4;
}

message ConfigMap {
	map<string, int64> IntMap = 1;
	map<string, string> StringMap = 2;
	// double is float64
	map<string, double> FloatMap = 3;
	map<string, bool> BoolMap = 4;
}

// core.Plugin
message Plugin {
	string TypeName = 1;
	string Name = 2;
	int64 Version = 3;
}
